Homepage and adding new issue completed

--- a/client/header.html
+++ b/client/header.html
@@ -1,8 +1,7 @@
 <div id="menu-bar">
-  <h1>Issues</h1>
+  <h1>Issue Tracker</h1>
   <ul>
-    <li><a href="#!/home">Home</a></li>
     <li><a href="#!/issue">Add Issue</a></li>
-    <li><a href="#!/list">List Issues</a></li>
+    <li><a href="#!/home">Home</a></li>
   </ul>
 </div>
