--- a/client/app/update/update.html
+++ b/client/app/update/update.html
@@ -1,5 +1,5 @@
-<div class="content" ng-controller="IssueController">
-  <form name="issueForm" novalidate>
+<div class="content" ng-controller="UpdateController">
+  <form name="issueForm" ng-init=getData() novalidate>
     <input type="text" placeholder="Issue Name" name="name" ng-model="title" ng-required="true">
     <div ng-show="issueForm.name.$touched && issueForm.name.$invalid">
       <small style="color: red; display: block; text-align: center;">Enter a valid name</small>
@@ -14,6 +14,10 @@
       <option value="frontend">Front-End</option>
       <option value="backend">Backend</option>
     </select>
-    <input class="add-btn" type="submit" value="Add" ng-disabled="issueForm.$invalid" ng-click="sendData()">
+    <p>Solved: <input type="checkbox" ng-model="solved"></p>
+    <div class="update-btn-container">
+      <input class="update-btn" type="submit" value="Update" ng-disabled="issueForm.$invalid" ng-click="updateData()">
+      <input class="del-btn" type="submit" value="Delete" ng-disabled="issueForm.$invalid" ng-click="deleteData()">
+    </div>
   </form>
 </div>
