--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,8 @@
     <script src="app\home\home.service.js"></script>
     <script src="app\issue\issue.module.js"></script>
     <script src="app\issue\issue.controller.js"></script>
-    <!-- <script src="app\issue\home.service.js"></script> -->
+    <script src="app\update\update.module.js"></script>
+    <script src="app\update\update.controller.js"></script>
   </head>
   <body>
     <header ng-include="'header.html'"></header>
