--- a/client/app/update/update.html
+++ b/client/app/update/update.html
@@ -1,23 +1,23 @@
-<div class="content" ng-controller="UpdateController">
-  <form name="issueForm" ng-init=getData() novalidate>
-    <input type="text" placeholder="Issue Name" name="name" ng-model="title" ng-required="true">
+<div class="content" ng-controller="UpdateController as vm">
+  <form name="issueForm" ng-init=vm.getData() novalidate>
+    <input type="text" placeholder="Issue Name" name="name" ng-model="vm.title" ng-required="true">
     <div ng-show="issueForm.name.$touched && issueForm.name.$invalid">
       <small style="color: red; display: block; text-align: center;">Enter a valid name</small>
     </div>
-    <input type="text" placeholder="Issue Details" name="details" ng-model="description" ng-required="true">
+    <input type="text" placeholder="Issue Details" name="details" ng-model="vm.description" ng-required="true">
     <div ng-show="issueForm.details.$touched && issueForm.details.$invalid">
       <small style="color: red; display: block; text-align: center;">Enter details</small>
     </div>
-    <input type="text" placeholder="Assigned To" name="details" ng-model="assignedTo" ng-required="true">
-    <select ng-model="category" ng-required="true">
+    <input type="text" placeholder="Assigned To" name="details" ng-model="vm.assignedTo" ng-required="true">
+    <select ng-model="vm.category" ng-required="true">
       <option value="" selected disabled hidden>Select Category</option>
       <option value="frontend">Front-End</option>
       <option value="backend">Backend</option>
     </select>
-    <p>Solved: <input type="checkbox" ng-model="solved"></p>
+    <p>Solved: <input type="checkbox" ng-model="vm.solved"></p>
     <div class="update-btn-container">
-      <input class="update-btn" type="submit" value="Update" ng-disabled="issueForm.$invalid" ng-click="updateData()">
-      <input class="del-btn" type="submit" value="Delete" ng-disabled="issueForm.$invalid" ng-click="deleteData()">
+      <input class="update-btn" type="submit" value="Update" ng-disabled="issueForm.$invalid" ng-click="vm.updateData()">
+      <input class="del-btn" type="submit" value="Delete" ng-disabled="issueForm.$invalid" ng-click="vm.deleteData()">
     </div>
   </form>
 </div>
